Fixed photo feed width and overflow issue.

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -20,9 +20,12 @@ a
   position: absolute
   float: left
 #feed
-  width: 10%
+  width: 200px
   height: 100%
   float: right
   opacity: 0.8
   background-color: white
   z-index: 1
+  overflow-y: hidden
+#feed img
+  width: 100%
